--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
     "jest": "29.4.1",
     "jest-environment-jsdom": "29.4.1",
     "prettier": "2.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2",
     "rollup": "3.11.0",
     "rollup-plugin-bundle-size": "1.0.3",
     "rollup-plugin-dts": "5.1.1",
@@ -104,8 +104,8 @@
     "typescript": "4.9.4"
   },
   "peerDependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2"
   },
   "dependencies": {},
   "release": {
