--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ node_modules/
 dist/
 coverage/
 /storybook-static/
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+/.yarn/releases/** binary
+/.yarn/plugins/** binary
+.yarn/install-state.gz
