--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prebuild": "yarn code-quality:check && rm -rf dist",
     "build": "rollup -c --bundleConfigAsCjs",
     "prebuild:storybook": "yarn code-quality:check && rm -rf storybook-static",
-    "build:storybook": "build-storybook",
-    "storybook": "start-storybook -p 6006",
+    "build:storybook": "storybook build",
+    "storybook": "storybook dev -p 6006",
     "ts:check": "yarn ts:check-types && yarn ts:circular-check",
     "ts:check-types": "tsc --noEmit",
     "ts:circular-check": "dpdm --no-output --no-tree --no-warning --exit-code circular:1 -T ./src/index.ts",
@@ -46,6 +46,9 @@
   "homepage": "https://ssbarbee.github.io/react-metamask-avatar",
   "devDependencies": {
     "@babel/core": "7.20.12",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@emotion/react": "11.7.1",
@@ -56,20 +59,20 @@
     "@rollup/plugin-typescript": "11.0.0",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "9.0.1",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-interactions": "6.5.16",
-    "@storybook/addon-links": "6.5.16",
-    "@storybook/addons": "6.5.16",
-    "@storybook/builder-webpack4": "6.5.16",
-    "@storybook/manager-webpack4": "6.5.16",
-    "@storybook/react": "6.5.16",
-    "@storybook/theming": "6.5.16",
+    "@storybook/addon-actions": "7.5.1",
+    "@storybook/addon-essentials": "7.5.1",
+    "@storybook/addon-interactions": "7.5.1",
+    "@storybook/addon-links": "7.5.1",
+    "@storybook/addons": "7.5.1",
+    "@storybook/react": "7.5.1",
+    "@storybook/react-webpack5": "7.5.1",
+    "@storybook/theming": "7.5.1",
     "@swc/core": "1.3.29",
     "@swc/jest": "0.2.24",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "13.5.0",
+    "@types/babel__preset-env": "^7",
     "@types/jest": "29.4.0",
     "@types/react": "17.0.53",
     "@types/react-dom": "17.0.18",
@@ -83,7 +86,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-simple-import-sort": "8.0.0",
-    "eslint-plugin-storybook": "0.6.6",
+    "eslint-plugin-storybook": "0.6.15",
     "eslint-plugin-unused-imports": "2.0.0",
     "gh-pages": "5.0.0",
     "husky": "8.0.3",
@@ -101,13 +104,16 @@
     "rollup-plugin-terser": "7.0.2",
     "semantic-release": "19.0.5",
     "semantic-release-cli": "5.4.4",
+    "storybook": "7.5.1",
     "typescript": "4.9.4"
   },
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2"
   },
-  "dependencies": {},
+  "resolutions": {
+    "underscore.string@~2.2.0rc": "2.2.1"
+  },
   "release": {
     "branches": [
       "main"
@@ -186,8 +192,8 @@
     ]
   },
   "engines": {
-    "node": ">= 16.17.0",
-    "yarn": ">= 1.22.0",
+    "node": ">= 20.9.0",
     "npm": "please-use-yarn"
-  }
+  },
+  "packageManager": "yarn@4.0.0"
 }
