--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "types": "dist/esm/types",
   "files": [
     "src/**/*.*",
+    "!src/**/*.stories.*",
+    "!src/**/*.test.*",
     "dist/**/*.*",
     "README.md",
     "LICENSE"
