chore: add breaking as tag

--- a/package.json
+++ b/package.json
@@ -175,6 +175,10 @@
             {
               "type": "test",
               "release": "patch"
+            },
+            {
+              "type": "breaking",
+              "release": "major"
             }
           ],
           "parserOpts": {
