--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "ts:circular-check": "dpdm --no-output --no-tree --no-warning --exit-code circular:1 -T ./src/index.ts",
     "lint:check": "eslint 'src/**/*.{ts,tsx}'",
     "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'",
-    "prettier:check": "prettier --check './src/**/*.{ts,tsx}' './.storybook/**/*.js'",
-    "prettier:fix": "prettier --write './src/**/*.{ts,tsx}' './.storybook/**/*.js'",
+    "prettier:check": "prettier --check './src/**/*.{ts,tsx}' './.storybook/**/*.ts'",
+    "prettier:fix": "prettier --write './src/**/*.{ts,tsx}' './.storybook/**/*.ts'",
     "prepare": "is-ci || husky install",
     "release": "semantic-release",
     "test": "jest --silent",
