--- a/package.json
+++ b/package.json
@@ -116,6 +116,9 @@
     "typescript": "4.9.4"
   },
   "peerDependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@metamask/jazzicon": "2.0.0",
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2"
   },
