fix: add prebuild step

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "scripts": {
     "deploy:storybook": "yarn build:storybook && gh-pages -d storybook-static",
     "prebuild": "yarn code-quality:check && rm -rf dist",
-    "build": "rollup -c --bundleConfigAsCjs",
+    "build": "yarn prebuild && rollup -c --bundleConfigAsCjs",
     "prebuild:storybook": "yarn code-quality:check && rm -rf storybook-static",
-    "build:storybook": "storybook build",
+    "build:storybook": "yarn prebuild:storybook && storybook build",
     "storybook": "storybook dev -p 6006",
     "ts:check": "yarn ts:check-types && yarn ts:circular-check",
     "ts:check-types": "tsc --noEmit",
