--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
   },
   "homepage": "https://ssbarbee.github.io/react-metamask-avatar",
   "devDependencies": {
-    "@babel/core": "7.20.12",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.23.2",
+    "@babel/core": "7.23.3",
+    "@babel/preset-env": "7.23.3",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@emotion/react": "11.7.1",
@@ -80,11 +80,11 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "13.5.0",
-    "@types/babel__preset-env": "^7",
+    "@types/babel__preset-env": "7.9.6",
     "@types/jest": "29.4.0",
     "@types/react": "17.0.53",
     "@types/react-dom": "17.0.18",
-    "babel-loader": "^8.3.0",
+    "babel-loader": "9.1.3",
     "concurrently": "7.6.0",
     "dpdm": "3.11.0",
     "eslint": "8.26.0",
