--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'",
     "prettier:check": "prettier --check './src/**/*.{ts,tsx}' './.storybook/**/*.ts'",
     "prettier:fix": "prettier --write './src/**/*.{ts,tsx}' './.storybook/**/*.ts'",
-    "prepare": "is-ci || husky install",
+    "prepare": "is-ci || husky",
     "release": "semantic-release",
     "test": "jest --silent",
     "test:coverage": "yarn test --coverage",
@@ -96,7 +96,7 @@
     "eslint-plugin-storybook": "0.6.15",
     "eslint-plugin-unused-imports": "2.0.0",
     "gh-pages": "5.0.0",
-    "husky": "8.0.3",
+    "husky": "9.1.6",
     "is-ci": "3.0.1",
     "istanbul-badges-readme": "1.8.4",
     "jest": "29.4.1",
