--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - main
+
+permissions:
+  contents: write
+  id-token: write   # REQUIRED for npm Trusted Publishing
+
 jobs:
   release:
     name: Release UI
@@ -18,6 +23,7 @@ jobs:
         with:
           node-version: '22.17.1'
           cache: 'yarn'
+          registry-url: https://registry.npmjs.org/
       - name: Cache node_modules
         uses: actions/cache@v4
         id: cache-node-modules
@@ -47,5 +53,4 @@ jobs:
       - name: Release UI
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PUBLISHING_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_PUBLISHING_TOKEN }}
         run: make release
