--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,4 +53,5 @@ jobs:
       - name: Release UI
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PUBLISHING_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_PUBLISHING_TOKEN }}
         run: make release
